fix 'active' color for the navabr to improve the contrast ratio and accessibility

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,7 +86,7 @@
 }
 
 .active {
-    background-color: #847655;
+    background-color: #5F634F;
 }
 
 
